--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node --loader ts-node/esm src/server.ts",
     "build": "tsc",
-    "start": "nodemon dist/server.js"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
